# dummy_chess

./: .gitignore  .gitlab-ci.yml  AGENTS.md  Attacks.hpp  Bitboard.hpp  Bitmask.hpp  Board.hpp  CMakeLists.txt  Constants.hpp  DebugTracer.hpp  Engine.hpp  Event.hpp  FEN.hpp  FFI.hpp  Interface.hpp  Makefile  MoveGuard.hpp  MoveLine.hpp  MoveScope.hpp  NNUE.hpp  NNUEEngine.hpp  Optimizations.hpp  PGN.hpp  Perft.hpp  Piece.hpp  README.md  State.hpp  String.hpp  UCI.hpp  Zobrist.hpp  abwalk.cpp  alphabeta.cpp  bench.cpp  bench_board.cpp  dummy_chess_bench_board  main.cpp  nnue.cpp  nnue_test.cpp  perft.cpp  playout.cpp  (+8 more)
.github/workflows/: ci.yml
.woodpecker/: build.yml
doc/: game-extraction-design.md  halfkp-efficient-design.md  nnue-analysis.md
python/: Bindings.cpp  CMakeLists.txt  README.md
python/dummy_chess/: __init__.py
python/tests/: test_pgn_parser.py
python/tests/pgn_fixtures/: regression_50move_checkmate.pgn  regression_enpassant_horizontal_pin.pgn  regression_re1e4_disambiguation.pgn  test_basic_evals.pgn  test_clock_annotations.pgn  test_from_position.pgn  test_mate_scores.pgn  test_nags.pgn  test_negative_evals.pgn  test_precise_evals.pgn  test_variations.pgn
rust/: .gitignore  Cargo.toml  build.rs
rust/.cargo/: config.toml
rust/docs/: ffi-patterns.md
rust/src/: lib.rs  main.rs
scripts/: bench.py  command_pkgconfig  compiler_flag_threads  compiler_support_clangflags  compiler_support_gccflags  compiler_support_gprof  compiler_support_jemalloc  compiler_support_libbsd  compiler_support_pgo  compiler_support_sanitize  compiler_support_stdranges  fathom_download  m42_download  perft_compare.py  perft_test.py  pgo_bench.py  sample_determinism.py  selfplay  syzygy_download  uci_utilities.py
test/: common.tcl  run_tests.sh  test_01_uci_handshake.exp  test_02_perft.exp  test_03_stop_thinking.exp  test_04_position_changes.exp  test_05_shutdown.exp  test_06_ucinewgame.exp  test_07_options.exp
training/: .gitignore  Cargo.toml  README.md  build_cython.sh  diagnose_speed.py  download.py  fast_features.pyx  generate_endgames.py  halfkp_extract.hpp  preprocess.py  preprocess_data.py  preprocess_puzzles.py  profile_pipeline.py  pyproject.toml  setup.py  setup_cython.py  test_zstd_scan.py  train.example.toml  train.py  train.rs  train.test.toml  validate.py
training/csrc/: extract_cuda.cu  preprocess.cpp
training/tests/: __init__.py  test_features.py  test_halfkav2.py  test_torch_features.py
zero/: .gitignore  BoardEncoding.hpp  CMakeLists.txt  DC0Engine.hpp  Logging.hpp  MCTS.hpp  MoveEncoding.hpp  Network.hpp  SelfPlay.hpp  Training.hpp  dc0_main.cpp  model.py  move_encoding.py  pyproject.toml
zero/docs/: DESIGN.md  progress.md
zero/tests/: main.cpp  test_board_encoding.cpp  test_mcts.cpp  test_move_encoding.cpp  test_network.cpp  test_selfplay.cpp  test_training.cpp
