[package]
name = "dummy_chess"
version = "0.0.3"
authors = ["Kirill Rodriguez"]
description = "A UCI chess engine, written from scratch."
repository = "https://codeberg.org/theoden8/dummy_chess"
readme = "../README.md"
publish = false

[build-dependencies]
bindgen = "0.72"

[dependencies]
libloading = "0.8"
libc = "0.2"
