[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dummy-chess-training"
version = "0.1.0"
description = "NNUE training for dummy_chess engine"
requires-python = ">=3.11"

dependencies = [
    "torch>=2.5.0,<2.6.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "python-chess>=1.999",
    "tqdm>=4.65.0",
    "scipy>=1.15.3",
    "polars>=1.38.0",
    "dummy-chess @ file:///${PROJECT_ROOT}/..",
]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.setuptools]
py-modules = ["train", "preprocess_puzzles", "generate_endgames"]

[dependency-groups]
dev = [
    "bpython>=0.26",
    "chess>=1.11.2",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
]
