[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dummy-chess-training"
version = "0.1.0"
description = "NNUE training for dummy_chess engine"
requires-python = ">=3.11"

dependencies = [
    "torch>=2.5.0,<2.6.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "chess>=1.10.0",
    "tqdm>=4.65.0",
    "scipy>=1.15.3",
    "polars>=1.38.0",
    "numba>=0.60.0",
    "zstandard>=0.22.0",
    "dummy-chess @ file:///${PROJECT_ROOT}/..",
    "orjson>=3.11.7",
    "pyarrow>=15.0.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.setuptools]
py-modules = ["train", "preprocess"]

[tool.pytest.ini_options]
markers = [
    "benchmark: marks tests as benchmarks (deselect with '-m \"not benchmark\"')",
]

[dependency-groups]
dev = [
    "bpython>=0.26",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
    "pytest>=8.0.0",
    "cairosvg>=2.7.0",
    "pillow>=10.0.0",
]
